# rover

./: .gitignore  CHANGELOG.md  LICENSE  PORTING.md  README.md  UPDATE_PROCEDURE.md  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-06-27-release-infra-design.md
lib/: rover.ex
lib/mix/tasks/: compile.rover_download.ex  rover.runtime.download.ex
lib/rover/: browser.ex  error.ex  precompiled.ex  protocol.ex  result.ex  runtime.ex
native/rover_runtime/: Cargo.toml
native/rover_runtime/src/: engine.rs  error.rs  main.rs  protocol.rs  wire.rs
scripts/: fetch-servo.sh  release.exs
test/: rover_test.exs
test/integration/: rover_integration_test.exs
test/rover/: error_test.exs  precompiled_test.exs  protocol_test.exs  runtime_test.exs
test/support/: test_server.ex
