[package]
name = "rover_runtime"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Per-browser Servo runtime driven by Rover (Elixir). Speaks length-prefixed MessagePack over stdio."
publish = false

[[bin]]
name = "rover_runtime"
path = "src/main.rs"

[dependencies]
# Wire format + serialization
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "2"

# Image encoding for screenshots
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Page / URL handling
url = "2.5"
dpi = "0.1"
cookie = "0.18"

# Servo dep.
#
# Local development: clone servo into `../../servo_rust` at the revision below.
# CI / release builds: the `release.yml` workflow clones Servo to the same path
# at this exact rev, so the path dep below resolves identically.
#
# Pinned Servo revision (update this, release.yml, and the local clone together):
#   678f9d7a47778d2a02ca5e1d2ee4b3cd2b3c2bc8
#
# We use a path dep rather than a git dep so cargo doesn't re-clone the
# 500MB+ Servo tree on every build in a fresh workspace.
servo = { path = "../../servo_rust/components/servo", default-features = false, features = ["js_jit", "baked-in-resources"] }

# Logging to stderr; BEAM captures and routes to Logger
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
